--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,18 @@
   <groupId>ImageBrowser</groupId>
   <artifactId>ImageBrowser</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+	 <dependency>
+	   <groupId>org.xerial</groupId>
+	   <artifactId>sqlite-jdbc</artifactId>
+	   <version>3.25.2</version>
+	 </dependency>
+	 <dependency>
+	    <groupId>org.apache.shiro</groupId>
+	    <artifactId>shiro-core</artifactId>
+	    <version>1.4.1</version>
+    </dependency>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
